--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
     font-size:40px;
     font-family:Fantasy; }
     
-    a:hover {
+    .hover:hover {
         color: skyblue;
       }
+      .middle {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 200px;
+        }
